@@ -1,3 +1,9 @@
+2016-06-13 Riccardo Mottola <rm@gnu.org>
+
+	* DBSoap.h
+        * DBSoap.m
+        Bump API version to 37 and increase SOQL size limit 9000->18000 retaining some safety compared to 20000.
+
 2016-05-27 Riccardo Mottola <rm@gnu.org>
 
 	* DBSoap.m (_login)
